use immutable collections for static and member variables when possible